Upsun thanks blog (#480)
Co-authored-by: Stanislav Zhuk <stasadev@gmail.com>
Co-authored-by: Andrew Berry <andrew@furrypaws.ca>
Co-authored-by: Ruth Cheesley <ruth@ruthcheesley.co.uk>

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -54,16 +54,17 @@ const releaseData = await getReleases()
           </p>
 
           <p>
-            In 2022, <a href="/blog/platform-sh-becomes-a-lead-sponsor-of-ddev/"
-              >Platform.sh stepped in as a major sponsor of DDEV</a
-            > and hired Randy to maintain it and continues doing so. DDEV remains
-            an open-source project, free to all, and with community governance via
-            an <a
-              href="https://github.com/ddev/ddev/discussions/categories/ddev-advisory-group"
-              >Advisory Group</a
-            >, and funded via the <a href="/foundation"
-              >DDEV Foundation</a
-            >, a Colorado, USA nonprofit organization.
+            In 2022, <a href="/blog/platform-sh-becomes-a-lead-sponsor-of-ddev/">Platform.sh
+            stepped in as a major sponsor of DDEV</a>, continuing through its
+            transition to the <a href="https://upsun.com">Upsun brand</a>, although at a lower level.
+          </p>
+          <p>
+            In 2023, <a href="/blog/introducing-maintainer-stas">Stas Zhuk</a> came aboard as an additional full-time maintainer and has made
+            amazing and constant contributions to the project.
+          </p>
+          <p>
+            DDEV is an open-source project, free to all, and now has community governance via
+            the <a href="/foundation">DDEV Foundation</a> and its Board of Directors.
           </p>
         </PostBody>
       </div>
@@ -71,7 +72,7 @@ const releaseData = await getReleases()
         <ul class="flex flex-wrap lg:block dark:text-white">
           <li class="mb-4 p-6 lg:p-0">
             <span class="text-5xl font-thin"
-              >{parseInt(10000).toLocaleString("en-US")}+</span
+              >{(19000).toLocaleString("en-US")}+</span
             >
             <span class="block font-mono text-sm">active users</span>
           </li>
@@ -100,7 +101,7 @@ const releaseData = await getReleases()
               }</span
             >
             <span class="block font-mono text-sm">GitHub stars</span>
-            <div class="mt-2  dark:text-slate-400">
+            <div class="mt-2 dark:text-slate-400">
               <figure>
                 <img
                   src="https://stars.medv.io/ddev/ddev.svg"
