--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -150,5 +150,6 @@ import "../styles/global.css"
       <slot />
     </div>
     <Footer />
+    <script src="/src/scripts/copyCode.js" type="module"></script>
   </body>
 </html>
