docs(quickstart): persist global config on codespaces, for ddev/ddev#6228

--- a/src/components/quickstart/Cloud.astro
+++ b/src/components/quickstart/Cloud.astro
@@ -38,6 +38,9 @@ const { latestVersion } = Astro.props
             "version": "latest"
         },
         "ghcr.io/ddev/ddev/install-ddev:latest": {}
+    },
+    "containerEnv": {
+        "XDG_CONFIG_HOME": "/workspaces/.config"
     }
 }
 `}
