--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -170,7 +170,7 @@ const navigation = {
       class="mt-8 border-t border-gray-300 pt-8 md:flex md:items-center md:justify-between dark:border-slate-700"
     >
       <div
-        class="flex space-x-6 md:order-2 items-center justify-center content-center"
+        class="flex flex-wrap gap-6 md:order-2 items-center justify-center content-center"
       >
         {
           navigation.social.map((item) => (
