--- a/src/components/SoftwareLogos.astro
+++ b/src/components/SoftwareLogos.astro
@@ -5,28 +5,44 @@
   <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
     <div class="flex justify-center content-center flex-wrap">
       <div class="p-10">
-        <img class="h-12 dark:invert" src="/logos/php.svg" alt="PHP logo" title="PHP" />
+        <a href="https://docs.ddev.com/en/stable/users/configuration/config/#php_version" target="_blank" rel="noopener noreferrer">
+          <img class="h-12 dark:invert" src="/logos/php.svg" alt="PHP logo" title="PHP" />
+        </a>
       </div>
       <div class="p-10 mt-2">
-        <img class="h-6 dark:invert" src="/logos/node.svg" alt="Node.js logo" title="Node.js" />
+        <a href="https://docs.ddev.com/en/stable/users/extend/customization-extendibility/#using-nodejs-with-ddev" target="_blank" rel="noopener noreferrer">
+          <img class="h-6 dark:invert" src="/logos/node.svg" alt="Node.js logo" title="Node.js" />
+        </a>
       </div>
       <div class="p-10">
-        <img class="h-16 -mt-4" src="/logos/mysql.svg" alt="MySQL logo" title="MySQL" />
+        <a href="https://docs.ddev.com/en/stable/users/extend/database-types/" target="_blank" rel="noopener noreferrer">
+          <img class="h-16 -mt-4" src="/logos/mysql.svg" alt="MySQL logo" title="MySQL" />
+        </a>
       </div>
       <div class="p-10">
-        <img class="h-8 mt-1" src="/logos/postgresql.svg" alt="PostgreSQL logo" title="PostgreSQL" />
+        <a href="https://docs.ddev.com/en/stable/users/extend/database-types/" target="_blank" rel="noopener noreferrer">
+          <img class="h-8 mt-1" src="/logos/postgresql.svg" alt="PostgreSQL logo" title="PostgreSQL" />
+        </a>
       </div>
       <div class="p-10">
-        <img class="h-4 mt-3 dark:invert" src="/logos/nginx.svg" alt="nginx logo" title="nginx" />
+        <a href="https://docs.ddev.com/en/stable/users/configuration/config/#webserver_type" target="_blank" rel="noopener noreferrer">
+          <img class="h-4 mt-3 dark:invert" src="/logos/nginx.svg" alt="nginx logo" title="nginx" />
+        </a>
       </div>
       <div class="p-10">
-        <img class="h-4 mt-3 dark:invert-50" src="/logos/apache.svg" alt="Apache logo" title="Apache" />
+        <a href="https://docs.ddev.com/en/stable/users/configuration/config/#webserver_type" target="_blank" rel="noopener noreferrer">
+          <img class="h-4 mt-3 dark:invert-50" src="/logos/apache.svg" alt="Apache logo" title="Apache" />
+        </a>
       </div>
       <div class="p-10">
-        <img class="h-5 mt-2" src="/logos/redis.svg" alt="Redis logo" title="Redis" />
+        <a href="https://github.com/ddev/ddev-frankenphp" target="_blank" rel="noopener noreferrer">
+          <img class="h-4 mt-3 dark:invert-25" src="/logos/frankenphp.svg" alt="FrankenPHP logo" title="FrankenPHP" />
+        </a>
       </div>
       <div class="p-10">
-        <img class="h-5 mt-2" src="/logos/memcached.svg" alt="Memcached logo" title="Memcached" />
+        <a href="https://github.com/ddev/ddev-redis" target="_blank" rel="noopener noreferrer">
+          <img class="h-5 mt-2 dark:invert-50" src="/logos/redis.svg" alt="Redis logo" title="Redis" />
+        </a>
       </div>
     </div>
   </div>
