--- a/src/components/Contributors.astro
+++ b/src/components/Contributors.astro
@@ -26,7 +26,7 @@ const contributors = await getContributors()
     <h3 class="mt-24 mb-8 text-base font-mono text-navy-300 text-center dark:text-navy-100">
       GitHub Sponsors
     </h3>
-    <div class="max-w-4xl mx-auto flex flex-wrap justify-center">
+    <div class="max-w-4xl mx-auto flex flex-wrap justify-center mb-8">
       <Sponsors size="large" align="center" />
     </div>
 
