--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -92,6 +92,7 @@ const blogPostSchema = [
       hasFeatureImage && shouldDisplayFeatureImage && (
         <FeatureImage
           src={entry.data.featureImage.src}
+          srcDark={entry.data.featureImage.srcDark}
           alt={entry.data.featureImage.alt}
           caption={entry.data.featureImage.caption}
           credit={entry.data.featureImage.credit}
