feat(style): use catppuccin-latte and one-dark-pro for code blocks

--- a/src/components/Contributors.astro
+++ b/src/components/Contributors.astro
@@ -30,7 +30,7 @@ const contributors = await getContributors()
       <Sponsors size="large" align="center" />
     </div>
 
-    <h3 class="text-base font-mono text-navy-300 text-center mb-8 dark:text-navy-100">
+    <h3 class="mt-24 mb-8 text-base font-mono text-navy-300 text-center dark:text-navy-100">
       GitHub Contributors
     </h3>
     <div class="max-w-5xl mx-auto flex flex-wrap justify-center">
